--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,23 +9,26 @@
     top: 0;
     width:100%;
     z-index: 2;
+    
 }
 
+.navbar-nav{
+  width:80%;
+}
 
 #nav-search{
         right: 1%;
         text-align: center;
         position: relative;
-        width: 70%;
+       width:80%;
 }
 
   
-  #searchBar{
+  #search-bar{
     border-radius: 4px;
     border:none;
-    padding-left: 5px;
-    width: 62%;
-    padding-bottom: 3px;
+    width:40rem;
+   
   }
   
 
@@ -46,3 +49,4 @@
     color: white;
     background-color: rgb(30, 131, 54)
   }
+
