--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,26 +3,6 @@
     height: 3rem;
 }
 
-#navbar{
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    width:100%;
-    z-index: 2;
-    
-}
-
-.navbar-nav{
-  width:80%;
-}
-
-#nav-search{
-        right: 1%;
-        text-align: center;
-        position: relative;
-       width:80%;
-}
-
   
   #search-bar{
     border-radius: 4px;
@@ -31,7 +11,9 @@
    
   }
   
-
+#nav-search{
+  margin-top:0.5rem ;
+}
   #searchBtn{
     border:none;
     margin-left: 1rem;
