--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,10 +7,14 @@
   #search-bar{
     border-radius: 4px;
     border:none;
-    width:40rem;
+    width:20rem;
    
   }
-  
+  .navbar{
+    position:fixed;
+    z-index: 2;
+    width:100%;
+  }
 #nav-search{
   margin-top:0.5rem ;
 }
@@ -32,3 +36,27 @@
     background-color: rgb(30, 131, 54)
   }
 
+#shopping-cart{
+  position: relative;
+
+}
+
+.nav-link{
+  margin-left: 1rem;
+}
+#cart-count {
+  background-color: yellow;
+  border-radius: 50%;
+  height: 15px;
+  width: 18px;
+  text-align: center;
+  padding-bottom: 24px;
+  margin-right: 3px;
+  position: relative;
+  right: 1rem;
+  z-index:2
+}
+
+.navbar-nav{
+ margin:0 auto;
+}
