--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,7 @@
 .brand{
     width:3rem;
     height: 3rem;
+   
 }
 
   
@@ -8,9 +9,10 @@
     border-radius: 4px;
     border:none;
     width:20rem;
-   
+    font-family: 'Vollkorn';
   }
   .navbar{
+    font-family: 'Vollkorn';
     position:fixed;
     z-index: 2;
     width:100%;
