--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,11 +4,16 @@
    
 }
 
-  
+  #search{
+    display:flex;
+    flex-wrap: wrap;
+    margin: auto;
+    
+  }
   #search-bar{
-    border-radius: 4px;
+
     border:none;
-    width:20rem;
+    width:21rem;
     font-family: 'Vollkorn';
   }
   .navbar{
@@ -20,23 +25,8 @@
 #nav-search{
   margin-top:0.5rem ;
 }
-  #searchBtn{
-    border:none;
-    margin-left: 1rem;
-    padding-bottom: 3px;
-    border-radius: 4px;
-    color: white;
-    background-color: rgb(40,167,69)
-  }
-  #searchBtn:hover{
-    cursor: pointer;
-    border:none;
-    margin-left: 1rem;
-    padding-bottom: 3px;
-    border-radius: 4px;
-    color: white;
-    background-color: rgb(30, 131, 54)
-  }
+  
+  
 
 #shopping-cart{
   position: relative;
