an actual functioning shopping cart

--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -1,40 +1,39 @@
-#section{
-    padding-top: 6rem;
+
+#inc-dec{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 2.7rem;
 }
+h5{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+
+
 #remove{
-    background: rgb(236, 13, 13);
-    /* background: linear-gradient(
-      90deg,
-      rgb(250, 49, 49) 11%,
-      rgb(194, 10, 10) 80%,
-      rgb(139, 8, 8) 100%
-    ); */
-    color: white;
-    border: none;
+  display: flex;
+  justify-content: center;
+  
 }
 
-#remove:hover{
-    background: rgb(252, 15, 15);
-    /* background: linear-gradient(
-      90deg,
-      rgb(139, 8, 8) 100%,
-      rgb(194, 10, 10) 80%,
-      rgb(250, 49, 49) 11%
-      
-     
-    ); */
-    color: white;
-    border: none;
+
+
+img{
+  margin: 0 auto;
+  border-radius: 4px;
+  height: 14rem;
+  width: 4rem;
 }
 
-#cartBtn{
-    background: rgb(29, 19, 211);
-    /* background: linear-gradient(
-      90deg,
-      rgba(15, 10, 107, 1) 11%,
-      rgba(17, 17, 182, 1) 80%,
-      rgba(10, 91, 237, 1) 100%
-    ); */
-    color: white;
-    border: none;
+#cart-items{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#total{
+  text-align: center;
+  margin: auto;
 }
