--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -63,7 +63,7 @@
   margin: 0 auto 2rem auto;
 }
 
-#book-img {
+.card-img-top {
   margin: 0 auto;
   border-radius: 4px;
   height: 15rem;
@@ -76,6 +76,9 @@
   display: fixed;
 }
 .card {
+  margin: auto;
+  margin-bottom: 2rem;
+  text-align: center;
   height: auto;
   border: none;
   background-color: #ffffff;
