--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,11 +19,19 @@
   .navbar{
     font-family: 'Vollkorn';
     position:fixed;
+    top:0;
     z-index: 2;
     width:100%;
   }
 #nav-search{
   margin-top:0.5rem ;
+}
+
+#little-cart{
+  bottom: 10px;
+  position: relative;
+  right: 10px;
+  
 }
   
   
