--- a/src/styles/BookPage.css
+++ b/src/styles/BookPage.css
@@ -1,9 +1,11 @@
 #bookPage{
     background-color: #f4f1de;
-    padding: 5rem 2rem;
+    padding: 8rem 2rem;
 
     justify-content: center;
-    margin: auto;
+    
+    margin-left: auto;
+    margin-right: auto;
     display: 'flex';
     flex-wrap: 'wrap';
     padding-top: '8%';
