fixed the details pages

--- a/src/styles/BookPage.css
+++ b/src/styles/BookPage.css
@@ -1,17 +1,13 @@
-#bookPage{
+.container{
     background-color: #f4f1de;
-    padding: 8rem 2rem;
-
-    justify-content: center;
+    padding-top: 8rem;
+ 
     
-    margin-left: auto;
-    margin-right: auto;
-    display: 'flex';
-    flex-wrap: 'wrap';
-    padding-top: '8%';
+    justify-content: center;
 }
 
+
 #theCard{
-    width: 50rem;
+  
     height: auto;
 }
